WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 232970
We should not kill all WebContent processes whenever the WebAuthn process crashes
https://bugs.webkit.org/show_bug.cgi?id=232970
Summary
We should not kill all WebContent processes whenever the WebAuthn process cra...
Chris Dumez
Reported
2021-11-10 16:15:17 PST
We should not kill all WebContent processes whenever the WebAuthn process crashes. This is overly aggressive. We should instead do like for the network process and have the WebProcess re-initiate the connection to the WebAuthn process when it's gone.
Attachments
Patch
(4.93 KB, patch)
2021-11-10 16:19 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.44 KB, patch)
2021-11-10 17:50 PST
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-11-10 16:15:40 PST
<
rdar://83941760
>
Chris Dumez
Comment 2
2021-11-10 16:19:20 PST
Created
attachment 443876
[details]
Patch
Geoffrey Garen
Comment 3
2021-11-10 16:24:05 PST
Comment on
attachment 443876
[details]
Patch r=me
Geoffrey Garen
Comment 4
2021-11-10 16:24:40 PST
Does this API test (or another) demonstrate that use of WebAuthn does succeed after restarting the WebAuthn process?
Chris Dumez
Comment 5
2021-11-10 16:28:59 PST
(In reply to Geoffrey Garen from
comment #4
)
> Does this API test (or another) demonstrate that use of WebAuthn does > succeed after restarting the WebAuthn process?
Hmm, this particular test only calls `internals.setMockWebAuthenticationConfiguration({ })` which causes the WebAuthn process to get re-launched but it indeed doesn't attempt to use WebAuthn afterwards. This seems to be the only test that involves killing the WebAuthn process... I know very little about WebAuthn :o) but I'll look into extending the test to actually use WebAuthn after the crash.
Chris Dumez
Comment 6
2021-11-10 17:50:10 PST
Created
attachment 443887
[details]
Patch
EWS
Comment 7
2021-11-10 21:03:22 PST
Committed
r285619
(
244120@main
): <
https://commits.webkit.org/244120@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443887
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug