We should not kill all WebContent processes whenever the WebAuthn process crashes https://bugs.webkit.org/show_bug.cgi?id=232970 <rdar://83941760>

Reviewed by Geoff Garen.

Source/WebKit:

We should not kill all WebContent processes whenever the WebAuthn process crashes. This is overly aggressive. We should
instead do like for the network process and have the WebProcess re-initiate the connection to the WebAuthn process when
it's gone.

No new tests, updated existing API test.

* UIProcess/WebAuthentication/WebAuthnProcessProxy.cpp:
(WebKit::WebAuthnProcessProxy::webAuthnProcessCrashed):
Do not terminate all WebProcesses when the WebAuthn process crashes.

* WebProcess/WebAuthentication/WebAuthnProcessConnection.cpp:
(WebKit::WebAuthnProcessConnection::didClose):
Make sure we call WebProcess::webAuthnProcessConnectionClosed() when the WebProcess
loses its connection to the WebAuthn process. This makes sure we clear m_webAuthnProcessConnection
and properly re-initiate a new WebAuthn process connection the next time WebProcess::ensureWebAuthnProcessConnection()
is called.

Tools:

Update API test coverage to reflect behavior change.

* TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/244120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285619 268f45cc-cd09-0410-ab3c-d52691b4dbfc