Source/WebKit/UIProcess/WebAuthentication/WebAuthnProcessProxy.cpp
@@ -127,8 +127,6 @@ void WebAuthnProcessProxy::getWebAuthnProcessConnection(WebProcessProxy& webProc
 
 void WebAuthnProcessProxy::webAuthnProcessCrashed()
 {
-    for (auto& processPool : WebProcessPool::allProcessPools())
-        processPool->terminateAllWebContentProcesses();
     sharedProcess() = nullptr;
 }
 
